# Generate-Difference-between-two-files

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: hexlet-lint.yml  hexlet-pytest.yml
gendiff/: __init__.py  cli.py  diff_tree.py  format_value.py  formatter.py  gendiff.py  generate_diff.py  internal_representation.py  make_format.py  parser.py  parser_gendiff.py  structure.py  value.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: f1f2json_diff.txt  f1f2plain_diff.txt  file1file2_json_diff.txt  filepath2.yml  jsondiff.txt
